[gd_scene format=3 uid="uid://c3eo3py3spkgr"]

[ext_resource type="Script" uid="uid://cky34wxu1po13" path="res://scripts/ui/settings_screen.gd" id="1_settings"]

[node name="SettingsScreen" type="Control" unique_id=1627520267]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_settings")

[node name="Background" type="ColorRect" parent="." unique_id=743469656]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.12, 0.15, 1)

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=723137547]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer" unique_id=1098502599]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer" unique_id=1957419892]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer" unique_id=612791849]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox" unique_id=236458148]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "üêú Ant Colony Simulator"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox" unique_id=545910849]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Configure your simulation settings"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBox" unique_id=672132743]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 450)
layout_mode = 2

[node name="General" type="ScrollContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="SettingsVBox" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="ColonySection" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.8, 0.4, 1)
theme_override_font_sizes/font_size = 16
text = "Colony Settings"

[node name="InitialAnts" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox/InitialAnts"]
layout_mode = 2
size_flags_horizontal = 3
text = "Initial Ants"

[node name="InitialAntsSpinBox" type="SpinBox" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox/InitialAnts"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 500.0
value = 20.0

[node name="MaxAnts" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox/MaxAnts"]
layout_mode = 2
size_flags_horizontal = 3
text = "Max Ants"

[node name="MaxAntsSpinBox" type="SpinBox" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox/MaxAnts"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 10000.0
value = 100.0

[node name="SpawnCost" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox/SpawnCost"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ant Spawn Cost"

[node name="SpawnCostSpinBox" type="SpinBox" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox/SpawnCost"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
step = 0.5
value = 10.0

[node name="SpawnRate" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox/SpawnRate"]
layout_mode = 2
size_flags_horizontal = 3
text = "Spawn Rate (ants/sec)"

[node name="SpawnRateSpinBox" type="SpinBox" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox/SpawnRate"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.1
max_value = 10.0
step = 0.1
value = 0.5

[node name="InitialFood" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox/InitialFood"]
layout_mode = 2
size_flags_horizontal = 3
text = "Initial Food Stored"

[node name="InitialFoodSpinBox" type="SpinBox" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox/InitialFood"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1000.0
step = 10.0
value = 100.0

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox"]
layout_mode = 2

[node name="FoodSection" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.4, 1)
theme_override_font_sizes/font_size = 16
text = "Food Settings"

[node name="ClusterCount" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox/ClusterCount"]
layout_mode = 2
size_flags_horizontal = 3
text = "Food Clusters"

[node name="ClusterCountSpinBox" type="SpinBox" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox/ClusterCount"]
unique_name_in_owner = true
layout_mode = 2
max_value = 20.0
value = 6.0

[node name="FoodPerCluster" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox/FoodPerCluster"]
layout_mode = 2
size_flags_horizontal = 3
text = "Food Per Cluster"

[node name="FoodPerClusterSpinBox" type="SpinBox" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox/FoodPerCluster"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1000.0
step = 10.0
value = 200.0

[node name="SourcesPerCluster" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox/SourcesPerCluster"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sources Per Cluster"

[node name="SourcesPerClusterSpinBox" type="SpinBox" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox/SourcesPerCluster"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 50.0
value = 8.0

[node name="ClusterRadius" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox/ClusterRadius"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cluster Radius"

[node name="ClusterRadiusSpinBox" type="SpinBox" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox/ClusterRadius"]
unique_name_in_owner = true
layout_mode = 2
min_value = 10.0
max_value = 500.0
step = 10.0
value = 100.0

[node name="HSeparator3" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox"]
layout_mode = 2

[node name="WorldSection" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.6, 0.9, 1)
theme_override_font_sizes/font_size = 16
text = "World Settings"

[node name="WorldWidth" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox/WorldWidth"]
layout_mode = 2
size_flags_horizontal = 3
text = "World Width"

[node name="WorldWidthSpinBox" type="SpinBox" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox/WorldWidth"]
unique_name_in_owner = true
layout_mode = 2
min_value = 500.0
max_value = 10000.0
step = 100.0
value = 2000.0

[node name="WorldHeight" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox/WorldHeight"]
layout_mode = 2
size_flags_horizontal = 3
text = "World Height"

[node name="WorldHeightSpinBox" type="SpinBox" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox/WorldHeight"]
unique_name_in_owner = true
layout_mode = 2
min_value = 500.0
max_value = 10000.0
step = 100.0
value = 2000.0

[node name="TimeScale" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox/TimeScale"]
layout_mode = 2
size_flags_horizontal = 3
text = "Initial Time Scale"

[node name="TimeScaleSpinBox" type="SpinBox" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/General/SettingsVBox/TimeScale"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.01
step = 0.01
value = 1.0

[node name="Ant Senses" type="ScrollContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="SensesVBox" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/Ant Senses"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="InfoLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/Ant Senses/SensesVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 11
text = "Configure how ants perceive their environment. Hover for details."
autowrap_mode = 2

[node name="Behavior Weights" type="ScrollContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="BehaviorVBox" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/Behavior Weights"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="InfoLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox/TabContainer/Behavior Weights/BehaviorVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 11
text = "Adjust weights for each behavior state. Higher values = stronger influence."
autowrap_mode = 2

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBox" unique_id=1342186398]
layout_mode = 2

[node name="ButtonsHBox" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBox" unique_id=1196178764]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ResetButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBox/ButtonsHBox" unique_id=1222242897]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "Reset Defaults"

[node name="ResetWeightsButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBox/ButtonsHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "Reset Weights"

[node name="PlayButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBox/ButtonsHBox" unique_id=637674315]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "‚ñ∂ Start Simulation"

[node name="Footer" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox" unique_id=1136792974]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 11
text = "Settings are automatically saved"
horizontal_alignment = 1
